[package]
name = "dungeoncrawl"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
bracket-lib = "~0.8"
legion = "=0.4.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-ar"

[package.metadata.winres]
OriginalFilename = "DUNGEONCRAWL.EXE"
LegalCopyright = "Copyright © 2026"