[package]
name = "dungeoncrawl"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
bracket-lib = "~0.8"
legion = "~0.4.0"
serde = { version = "=1.0.115" }
ron = "=0.6.1"

[profile.release]
lto = "thin"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-ar"

[package.metadata.winresource]
OriginalFilename = "DUNGEONCRAWL.EXE"
FileDescription = "Dungeon Crawl Game"
ProductName = "Dungeon Crawl"
CompanyName = "Rip City Technologies"
LegalCopyright = "Copyright © 2026 Rip City Technologies"